Fix travel and questions alignment issue

--- a/css/style.css
+++ b/css/style.css
@@ -91,7 +91,11 @@ a:hover {
 }
 
 .subheading-pad {
-  padding: 20px 0;
+  padding: 20px 10px;
+}
+
+.remove-margin {
+  margin: 0;
 }
 
 .divider {
@@ -230,7 +234,7 @@ hr {
 }
 
 .header .menu-btn:checked ~ .menu {
-  max-height: 240px;
+  max-height: 400px;
 }
 
 .header .menu-btn:checked ~ .menu-icon .navicon {
@@ -290,6 +294,7 @@ hr {
   position: relative;
   text-align: center;
   flex: 100%;
+  height: 100vh;
   transform: translateY(10px);
 }
 
@@ -311,7 +316,7 @@ hr {
 .events-img {
   width: 100%;
   height: 100vh;
-  padding-top: 100%;
+  /* padding-top: 100%; */
   background-size: cover;
   background-repeat: no-repeat;
 }
@@ -355,6 +360,7 @@ hr {
   border: 1px solid rgba(255, 255, 255, 0.14);
   padding: 1em;
   display: block;
+  cursor: pointer;
 }
 
 .title:after, .title:before {
@@ -399,7 +405,7 @@ hr {
 /* TRAVEL */
 .travel-container {
   position: relative;
-  height: 100vh;
+  height: 100%;
 }
 
 /* RSVP */
@@ -568,6 +574,13 @@ hr {
   .hero-text {
     flex: 50%;
     height: 100vh;
+  }
+
+  .travel-container {
+    display: flex;
+    justify-content: center;
+    height: 100%;
+    align-items: center;
   }
 
   .section-header {
